--- a/honeymoon1.html
+++ b/honeymoon1.html
@@ -205,18 +205,18 @@
             <h2>De ce sa alegi aceasta oferta?</h2>
             <div class="destinations">
                 <div class="destination">
-                    <h3>Krabi</h3>
-                    <p>Krabi este locul perfect pentru o luna de miere, oferind plaje idilice cu nisip fin, ape cristalline si un peisaj montan spectaculos. Aici, cuplurile pot petrece momente de neuitat in intimitatea unor resorturi luxoase, savurand apusuri romantice si explorand golfuri ascunse. Atmosfera linistita si natura salbatica creeaza un cadru ideal pentru relaxare si aventuri in doi.</p>
-                    <a href="krabi.html" class="cta-button">Descoperă</a>
-                </div>
-                <div class="destination">
-                    <h3>Koh Yao Yai</h3>
-                    <p>Koh Yao Yai este o insula linistita, perfecta pentru o vacanta de relaxare. Aici, plajele izolate, ape cristaline si peisajele montane impresionante creeaza un cadru ideal pentru a te destinde. Fara aglomeratie, insula ofera un refugiu romantic, cu resorturi de lux, apusuri spectaculoase si oportunitati de a explora natura salbatica intr-un mediu seren.</p>
-                    <a href="kohyaoyai" class="cta-button">Descoperă</a>
-                </div>
-                <div class="destination">
                     <h3>Bangkok</h3>
                     <p>Bangkok este un oras vibrant, unde traditia si modernitatea se intalnesc perfect. Aici, cuplurile pot explora temple istorice si palate regale, dar si sa se bucure de viata de noapte electrizanta si de restaurante rafinate. Atmosfera sa cosmopolita, alaturi de street food-ul delicios si atractiile culturale, face din Bangkok o destinatie unica, plina de energie si culoare.</p>
+                    <a href="Bangkok.html" class="cta-button">Descoperă</a>
+                </div>
+                <div class="destination">
+                    <h3>Phuket</h3>
+                    <p>Phuket este perfect pentru o lună de miere, cu plaje idilice, resorturi luxoase și apusuri romantice. Cu o atmosferă vibrantă și activități diverse, de la explorarea templului Big Buddha la relaxarea pe plajele liniștite, este locul ideal pentru o vacanță de neuitat.</p>
+                    <a href="Bangkok.html" class="cta-button">Descoperă</a>
+                </div>
+                <div class="destination">
+                    <h3>Phi Phi</h3>
+                    <p>Insulele Phi Phi sunt un paradis romantic, cu ape cristaline, stânci impunătoare și plaje izolate. Ideal pentru escapade intime, snorkeling și apusuri spectaculoase, Phi Phi oferă un cadru de neuitat pentru o lună de miere.</p>
                     <a href="Bangkok.html" class="cta-button">Descoperă</a>
                 </div>
             </div>
@@ -226,18 +226,18 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                 <div class="destination">
-                    <img src="https://images.pexels.com/photos/1031659/pexels-photo-1031659.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Bangkok Tour">
-                    <h3>Bangkok Highlights</h3>
-                    <p>Sedere 3 nopti. </p>
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731932208/iStock-871569534_chti1w.jpg" alt="Bangkok Tour">
+                    <h3>Bangkok</h3>
+                    <p>Sedere 4 nopti</p>
                 </div>
                 <div class="destination">
-                    <img src="https://images.unsplash.com/photo-1559732914-0dd83b4db96e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8a3JhYml8ZW58MHx8MHx8fDA%3D" alt="Phuket Getaway">
-                    <h3>Krabi Escape</h3>
-                    <p>Sedere 4 nopti.</p>
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
+                    <h3>Phuket</h3>
+                    <p>Sedere 4 nopti</p>
                 </div>
                 <div class="destination">
-                    <img src="https://images.unsplash.com/photo-1610605701646-e6eb2d296778?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Phi Phi Islands">
-                    <h3>Koh Yao Yai Adventure</h3>
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929849/iStock-1462519363_wxoxd7.jpg" alt="Phi Phi Islands">
+                    <h3>Phi Phi</h3>
                     <p>Sedere 3 nopti</p>
                 </div>
                 
@@ -249,44 +249,16 @@
             <p>Explore the best of Thailand over 10 days!</p>
             <div class="destinations">
                 <div class="destination">
-                    <h3>Day 1</h3>
-                    <p>Relaxare la hotel + plimbare si experimentare China Town.</p>
+                    <h3>Bangkok</h3>
+                    <p>Ajungeți într-un oraș vibrant, unde vă veți relaxa la o cină pe malul râului. Vizitați temple și palate faimoase, explorați piețele locale și bucurați-vă de un cocktail cu vedere panoramică la oraș. În ziua următoare, descoperiți locuri iconice și centre comerciale, apoi încheiați seara cu o cină romantică pe acoperiș.</p>
                 </div>
                 <div class="destination">
-                    <h3>Day 2</h3>
-                    <p>Floating Market + Train Market + Dinner Cruise.</p>
+                    <h3>Phuket</h3>
+                    <p>Zburați către o insulă cunoscută pentru plajele sale superbe și viața de noapte animată. Petreceți o zi relaxantă pe plajă, iar a doua zi explorați puncte de belvedere și locuri culturale. Înscrieți-vă la o excursie de o zi la o lagună înconjurată de stânci. Savurați un masaj sau o cină romantică în seara următoare.</p>
                 </div>
                 <div class="destination">
-                    <h3>Day 3</h3>
-                    <p>Explorarea templelor si a palatului regal + shopping.</p>
-                </div>
-                <div class="destination">
-                    <h3>Day 4</h3>
-                    <p>Zbor catre Phuket + Relaxare la hotel + Masaj Thailandez.</p>
-                </div>
-                <div class="destination">
-                    <h3>Day 5</h3>
-                    <p>Relaxare la plaja si vizitarea sanctuarului pentru elefanti.</p>
-                </div>
-                <div class="destination">
-                    <h3>Day 6</h3>
-                    <p>Island Hopping - Discover nearby islands.</p>
-                </div>
-                <div class="destination">
-                    <h3>Day 7</h3>
-                    <p>Relaxation at the resort - Enjoy spa treatments.</p>
-                </div>
-                <div class="destination">
-                    <h3>Day 8</h3>
-                    <p>Local Market Experience - Shop for souvenirs.</p>
-                </div>
-                <div class="destination">
-                    <h3>Day 9</h3>
-                    <p>Free day in Phuket - Explore or relax as you wish.</p>
-                </div>
-                <div class="destination">
-                    <h3>Day 10</h3>
-                    <p>Departure - Take wonderful memories home.</p>
+                    <h3>Phi Phi</h3>
+                    <p>Plecați într-o insulă de vis, unde vă veți bucura de plaje și ape limpezi. Petreceți zile relaxante, făcând snorkeling și explorând plaje izolate și colțuri ascunse. Urmați un traseu de drumeție până la un punct de belvedere pentru vederi spectaculoase. În ultima zi, încheiați călătoria cu un apus de soare pe plajă, înainte de a reveni la insula principală pentru zborul de întoarcere.</p>
                 </div>
             </div>
         </section>
