--- a/honeymoon2.html
+++ b/honeymoon2.html
@@ -203,12 +203,16 @@
             <h2>De ce sa alegi aceasta oferta?</h2>
             <div class="destinations">
                 <div class="destination">
+                    <h3>Chiang Mai</h3>
+                    <p>Este o destinatie romantica in inima Thailandei, temple istorice, peisaje montane, paduri luxuriant, experiente culturale autentice, plimbari pe elefant, viata traditionala si apusuri magice.</p>
+                </div>
+                <div class="destination">
                     <h3>Krabi</h3>
                     <p>Este o destinatie romantica perfecta pentru luna de miere, plaje de nisip alb, ape turcoaz, peisaje impresionante, insule exotice, activitati de snorkelling, drumetii, apusuri spectaculoase si relaxare totala.</p>
                 </div>
                 <div class="destination">
-                    <h3>Chiang Mai</h3>
-                    <p>Este o destinatie romantica in inima Thailandei, temple istorice, peisaje montane, paduri luxuriant, experiente culturale autentice, plimbari pe elefant, viata traditionala si apusuri magice.</p>
+                    <h3>Ko Lipe</h3>
+                    <p>Este un paradis tropical, cu plaje de nisip alb și ape cristaline, ideal pentru o lună de miere. Atmosfera liniștită și resorturile de lux oferă intimitate, iar apusurile și snorkelingul sunt experiențe de neuitat.</p>
                 </div>
             </div>
         </section>
@@ -216,15 +220,20 @@
         <section id="offers" class="section">
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
-                <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2014/10/15/09/49/spoke-the-beach-489422_1280.jpg" alt="Bangkok Tour">
-                    <h3>Krabi</h3>
-                    <p>Sedere 5 nopti. </p>
+                 <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739165011/822_hma5pb.jpg" alt="Phuket Getaway">
+                    <h3>Chiang Mai</h3>
+                    <p>Sedere 5 nopti</p>
                 </div>
                 <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2017/04/12/11/05/rice-terraces-2224264_1280.jpg" alt="Phuket Getaway">
-                    <h3>Chiang Mai</h3>
-                    <p>Sedere 3 nopti.</p>
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929999/iStock-1473165467_tjjfil.jpg" alt="Bangkok Tour">
+                    <h3>Krabi</h3>
+                    <p>Sedere 4 nopti</p>
+                </div>
+                <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739264861/10248_xcamrm.jpg" alt="Phuket Getaway">
+                    <h3>Ko Lipe</h3>
+                    <p>Sedere 4 nopti</p>
                 </div>
                 
             </div>
@@ -232,44 +241,19 @@
 
         <section id="itinerary" class="section">
             <h2>Your Holiday Itinerary</h2>
-            <p>Exploreaza Thailanda in 9 zile!</p>
+            <p>Exploreaza Thailanda in 14 zile!</p>
             <div class="itinerary-cards">
                 <div class="itinerary-card">
-                    <h3>Day 1</h3>
-                    <p>Relaxare pe plaja si la hotel.</p>
+                    <h3>Chiang Mai</h3>
+                    <p>Ajungeți în Chiang Mai și începeți cu o cină relaxantă într-un restaurant local. În următoarele zile, explorați templele fascinante și piețele tradiționale, vizitați grădina zoologică sau mergeți într-o excursie pe munte pentru a descoperi triburi locale. Încheiați ziua cu o masă tradițională și o plimbare pe străzile pline de viață.</p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 2</h3>
-                    <p>Vizita la sanctuarul elefantilor si cina romantica</p>
+                    <h3>Krabi</h3>
+                    <p>Zburați spre Krabi, un loc renumit pentru plajele sale spectaculoase și stâncile impresionante. Petreceți zile relaxante pe plajele de nisip alb, apoi explorați insulele din apropiere cu o excursie cu barca. Nu ratați o vizită la parcurile naturale sau o baie în piscinele naturale din munți. Seara, savurați fructe de mare proaspete pe malul mării.</p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 3</h3>
-                     <p>Island Hopping - Descopera insulele din apropiere.</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 4</h3>
-                    <p>-</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 5</h3>
-                    <p>-.</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 6</h3>
-                    <p>-.</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 7</h3>
-                    <p>-</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 8</h3>
-                    <p>-</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 9</h3>
-                    <p>-</p>
-                </div>
+                    <h3>Ko Lipe</h3>
+                     <p>Zburați sau călătoriți cu feribotul până la Koh Lipe, un colț de rai. Relaxați-vă pe plajele idilice și faceți snorkeling în apele cristaline. Întreprindeți excursii pentru a explora insulele din jur sau a vă bucura de o zi de scufundări. În fiecare seară, vizionați apusuri spectaculoase și savurați o cină romantică pe malul mării. În ultimele zile, relaxați-vă complet, bucurându-vă de acest paradis tropical.</p>
             </div>
         </section>
         
