--- a/honeymoon2.html
+++ b/honeymoon2.html
@@ -291,7 +291,7 @@
             <h2>Ce cuprinde vacanta?</h2>
             <div class="destinations">
                 <div class="destination">
-                    <p>Rezervarea cazarilor + transporturilor + activitatilor.</p>
+                    <p>Rezervarea cazarilor - transporturilor - activitatilor.</p>
                 </div>
                 <div class="destination">
                     <p>Itinerariu personalizat care cuprinde toate detaliile.</p>
