--- a/honeymoon3.html
+++ b/honeymoon3.html
@@ -207,12 +207,12 @@
                     <p>Bangkok oferă o combinație unică de cultură vibrantă, gastronomie delicioasă, temple impresionante, viață de noapte animată și shopping diversificat.</p>
                 </div>
                 <div class="destination">
-                    <h3>Khao Lak</h3>
-                    <p>Este o destinatie linistita pentru luna de miere, plaje frumoase, ape cristaline, hoteluri de lux, activitati de relaxare, snorkelling, scufundari si peisaje naturale spectaculoase.</p>
+                    <h3>Khao Sok</h3>
+                    <p>Este o destinație magică, perfectă pentru o lună de miere, cu jungle luxuriante și lacuri cristaline. Puteți explora natura sălbatică prin drumeții sau plimbări cu barca, iar atmosfera liniștită și resorturile în mijlocul naturii oferă o escapadă romantică de neuitat.</p>
                 </div>
                 <div class="destination">
-                    <h3>Krabi</h3>
-                    <p>Este destinatie romantica perfecta pentru luna de miere, plaje de nisip alb, ape turcoaz, peisaje impresionante, insule exotice, activitati de snorkelling, drumetii, apusuri spectaculoase si relaxare totala..</p>
+                    <h3>Khao Lak</h3>
+                    <p>Este o destinatie linistita pentru luna de miere, plaje frumoase, ape cristaline, hoteluri de lux, activitati de relaxare, snorkelling, scufundari si peisaje naturale spectaculoase.</p>
                 </div>
             </div>
         </section>
@@ -221,67 +221,38 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                 <div class="destination">
-                    <img src="https://images.pexels.com/photos/1374377/pexels-photo-1374377.jpeg" alt="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
                     <h3>Bangkok </h3>
-                    <p>Sedere 3 nopti. </p>
-                </div>
-                <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2020/03/16/18/59/khao-lak-4938019_960_720.jpg" alt="Phuket Getaway">
-                    <h3>Khao Lak</h3>
-                    <p>Sedere 3 nopti.</p>
-                </div>
-                <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2022/01/07/08/43/thailand-6921418_1280.jpg" alt="Phi Phi Islands">
-                    <h3>Krabi</h3>
                     <p>Sedere 3 nopti</p>
                 </div>
-                
+                <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739169181/848_vbsr33.jpg" alt="Phi Phi Islands">
+                    <h3>Khao Sok</h3>
+                    <p>Sedere 4 nopti</p>
+                </div>
+                <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739163344/freepik__adjust__73830_t9vb7t.png" alt="Phuket Getaway">
+                    <h3>Khao Lak</h3>
+                    <p>Sedere 5 nopti</p>
+                </div>
             </div>
         </section>
 
         <section id="itinerary" class="section">
             <h2>Your Holiday Itinerary</h2>
-            <p>Exploreaza Thailanda in 10 zile!</p>
+            <p>Exploreaza Thailanda in 14 zile!</p>
             <div class="itinerary-cards">
                 <div class="itinerary-card">
-                    <h3>Day 1</h3>
-                    <p>Relaxare la hotel + plimbare si experimentare China Town.</p>
+                    <h3>Bangkok</h3>
+                    <p>Ajungeți în capitala vibrantă și începeți cu o cină romantică pe malul râului. În următoarele zile, explorați templele faimoase și palatele regale, precum și piețele tradiționale. Vizitați piețele flotante și faceți o plimbare cu barca pe canalele orașului. După o zi de explorare, încheiați cu o cină pe un restaurant de pe acoperiș cu vedere panoramică asupra orașului.</p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 2</h3>
-                    <p>Floating Market + Train Market + Dinner Cruise.</p>
+                    <h3>Khao Sok</h3>
+                    <p>Zburați către un loc mai izolat și verde, unde natura sălbatică vă va încânta. Petreceți zilele explorând Parcul Național Khao Sok, făcând drumeții în junglă și plimbări cu barca pe un lac spectaculos. Vizitați peșterile și cascadele din zonă și încheiați ziua cu o cină relaxantă în mijlocul naturii. În ultima zi, puteți petrece timp pe lac, bucurându-vă de linistea oferită de această destinație unică.</p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Day 3</h3>
-                    <p>Explorarea templelor si a palatului regal + shopping.</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 4</h3>
-                    <p>Zbor catre Khao Lak + Relaxare la hotel + Masaj Thailandez.</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 5</h3>
-                    <p>Relaxare la plaja si vizitarea sanctuarului pentru elefanti.</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 6</h3>
-                    <p>-.</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 7</h3>
-                    <p>-</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 8</h3>
-                    <p>-</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 9</h3>
-                    <p>-</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 10</h3>
-                    <p>Departure - Take wonderful memories home.</p>
+                    <h3>Khao Lak</h3>
+                    <p>Ajungeți la Khao Lak, un loc perfect pentru relaxare pe plaje liniștite și explorarea insulelor din jur. Petreceți zilele făcând snorkeling sau scufundări, sau pur și simplu relaxându-vă pe plajele de nisip alb. Vizitați parcurile naționale și adânciți-vă în cultura locală. În ultima zi, bucurați-vă de apusuri spectaculoase pe plajă și încheiați călătoria cu o cină romantică pe malul mării.</p>
                 </div>
             </div>
         </section>
