--- a/honeymoon1.html
+++ b/honeymoon1.html
@@ -246,7 +246,7 @@
 
         <section id="itinerary" class="section">
             <h2>Your Holiday Itinerary</h2>
-            <p>Explore the best of Thailand over 10 days!</p>
+            <p>Exploreaza Thailanda in 12 zile!</p>
             <div class="destinations">
                 <div class="destination">
                     <h3>Bangkok</h3>
