--- a/customization.html
+++ b/customization.html
@@ -201,13 +201,13 @@
     </div>
 
     <div class="hero">
-        <h1>Customize Your Honeymoon</h1>
-        <a class="cta-button" href="#form">Start Customization</a>
+        <h1> Personalizeaza-ti vacanta! </h1>
+        <a class="cta-button" href="#form">Incepe Acum</a>
     </div>
 
     <main>
         <section id="form" class="section">
-            <h2>Tell Us Your Preferences</h2>
+            <h2>Spune-ne preferintele tale</h2>
             <form id="bookingForm" action="https://script.google.com/macros/s/AKfycbwfMtZhGcIJWUCvjlmQBnwxh4hKu4oxAJdqSsvw4zgKJ6VlrOM4XaJs_vGzZWLVdAqB/exec" method="POST">
                 <input type="email" id="email" name="email" placeholder="Email" required>
                 <div class="phone-container">
