--- a/customization.html
+++ b/customization.html
@@ -212,9 +212,9 @@
                 <input type="email" id="email" name="email" placeholder="Email" required>
                 <div class="phone-container">
                     <select id="countryCode" name="countryCode" required>
+                        <option value="+40">+40 (Romania)</option>
                         <option value="+1">+1 (USA)</option>
                         <option value="+44">+44 (UK)</option>
-                        <option value="+40">+40 (Romania)</option>
                         <option value="+49">+49 (Germany)</option>
                         <option value="+33">+33 (France)</option>
                         <option value="+39">+39 (Italy)</option>
@@ -265,7 +265,7 @@
                 <input type="number" id="guests" name="guests" placeholder="Numar de oaspeti" required>
 
                 <textarea id="description" name="description" placeholder="Describe what you want from the holiday" required></textarea>
-                <button type="submit" class="cta-button">Submit Preferences</button>
+                <button type="submit" class="cta-button">Trimite</button>
             </form>
         </section>
     </main>
@@ -273,14 +273,14 @@
     <footer>
         <p>© 2024 Trasia Agency. All rights reserved.</p>
         <div class="social-media">
-            <a href="https://www.facebook.com/profile.php?id=61566412341547" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/1/PNG/256/social_facebook_fb_35.png" alt="Facebook">
+            <a href="https://www.facebook.com/profile.php?id=61572477047717" target="_blank" class="social-icon">
+                <img src="https://www.svgrepo.com/show/419926/facebook-fb-social-icon.svg" alt="Facebook">
             </a>
             <a href="https://wa.me/+40771410487" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/622/PNG/512/whatsapp-logo_icon-icons.com_57054.png" alt="WhatsApp">
+                <img src="https://www.svgrepo.com/show/419933/whats-app-whatsapp-whatsapp-icon.svg" alt="WhatsApp">
             </a>
             <a href="https://www.instagram.com/trasia.agency/" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/2066/PNG/512/instagram_icon_125245.png" alt="Instagram">
+                <img src="https://www.svgrepo.com/show/419930/instagram-socials-social-media-icon.svg" alt="Instagram">
             </a>
         </div>
     </footer>
