--- a/Vacanta3.html
+++ b/Vacanta3.html
@@ -276,12 +276,12 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• One Day Trip To <b>Railay Beach</b></p>
-                    <p>•⁠ Cave of the Princess Goddess Legend</p>
+                    <p>• Excursie de o zi la <b>Plaja Railay</b></p>
+                    <p>•⁠ Peștera Zeiței Prințesei Legenda</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
-                    <p>•Viziteaza <b>4 Islands And Hong Islands</b> With Luxury Longtail Boat </p>
+                    <p>•Vizitează <b>4 Insule și Insulele Hong</b> cu barcă tradițională de lux</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
@@ -292,6 +292,7 @@
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
                     <p>• Relaxare pe plaja </p> 
+                    <p>• Unul dintre cele mai populare panorame din Phang Nga </p> 
                 </div>
                 <div class="itinerary-card">
                  <h3>Ziua 9</h3>
