--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -252,36 +252,36 @@
                 <div class="itinerary-card">
                     <h3>Ziua 1</h3>
                     <p>• Sosire la <b>Khao Sok</b> </p>
-                    <p>• Take a Short Jungle Trek </p>
-                    <p>• Enjoy <b>River Tubing or Canoeing</b> </p>
-                    <p>• Join A Night Safari </p>
+                    <p>• Fă o scurtă drumeție prin junglă </p>
+                    <p>• tubing pe râu sau canoe</p>
+                    <p>• Participă la un safari de noapte </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 2</h3>
-                    <p>• Day Tour to Famous Lake </p>
-                    <p>• Enjoy Water Sports and Activities </p>
-                    <p>• Relax At The <b>Floating House</b> </p>
+                    <p>• Tur de o zi la lacul faimos </p>
+                    <p>• Explorează și distrează-te cu sporturile acvatice </p>
+                    <p>• Relaxează-te la <b>Floating House</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 3</h3>
-                    <p>• Visit a Nearby Viewpoint or Waterfalls </p>
+                    <p>• Vizitează un punct de belvedere sau cascade din apropier </p>
                     <p>• Sosire la <b>Khao Lak</b> </p>
                 </div>
                  <div class="itinerary-card">
                     <h3>Ziua 4</h3>
-                    <p>•⁠ ⁠⁠Relax on the beautiful beaches </p>
-                    <p>•⁠ ⁠⁠Explore the Local Night Markets</p>
+                    <p>•⁠ ⁠⁠Relaxează-te pe plajele frumoase </p>
+                    <p>•⁠ ⁠⁠Explorează piețele locale de noapte</p>
                 </div>   
                   <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• ⁠Take a Day trip to Beautiful Island </p> 
-                    <p>•⁠ <b>Snorkeling or Diving</b> Experience </p>
-                    <p>•⁠ ⁠⁠Explore Fishing Villages </p>                
+                    <p>• ⁠Fă o excursie de o zi pe o insulă frumoasă </p> 
+                    <p>•⁠ Experiență de <b>snorkeling sau scufundări</b> </p>
+                    <p>•⁠ ⁠⁠Explorează satele de pescari </p>                
                   </div>              
                   <div class="itinerary-card">
                     <h3>Ziua 6</h3>
-                    <p>• ⁠Visit <b>Khao Lak National Park</b> </p>
-                    <p>•⁠ ⁠⁠Visit a Nearby Viewpoint or Waterfalls  </p>
+                    <p>• Vizitează <b> Parcul Național Khao Lak</b> </p>
+                    <p>•⁠ Vizitează un punct de belvedere sau cascade din apropiere  </p>
                 </div>                 
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
