--- a/Vacanta5.html
+++ b/Vacanta5.html
@@ -294,17 +294,17 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
-                    <p>• Visit The White Temple</p> 
-                    <p>• Explore The Blue Temple</p>
-                    <p>• Explore The Big Buddha</p>
-                    <p>• Enjoy Night Barzaar</p>
+                    <p>• Vizitează Templul Alb </p>
+                    <p>• Explorează Templul Albastru </p>
+                    <p>• Explorează Marele Buddha </p>
+                    <p>• Bucură-te de Night Bazaar </p>
                 </div>
                  <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• Visit The Golden Triangle Where Thailand Myanmar and Laos Meet</p> 
-                    <p>• Wat Phra that Chedi Luang</p>
-                    <p>• Choui Fong Tea Plantaion</p>
-                    <p>• Depart for Chiang Mai</p>                
+                    <p>• Vizitează Triunghiul de Aur, unde se întâlnesc Thailanda, Myanmar și Laos</p> 
+                    <p>• Wat Phra That Chedi Luang</p>
+                    <p>• Plantația de ceai Choui Fong</p>
+                    <p>• Sosire la Chiang Mai</p>                
                  </div>      
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
@@ -318,13 +318,13 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
-                    <p>• <b>Bamboo Rafting</b> in Chiang Mai </p>
+                    <p>• <b>Bamboo Rafting</b> la Chiang Mai </p>
                     <p>• Bucura-te de cascade uimitoare <b>Sticky Waterfall</b></p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 9</h3>
-                    <p>• Trip To <b>Railay Beach</b></p>
-                    <p>•⁠ Cave of the Princess Goddess Legend</p>
+                    <p>• Excursie de o zi la <b>Plaja Railay</b></p>
+                    <p>•⁠ Peștera Zeiței Prințesei Legenda</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
