--- a/Vacanta6.html
+++ b/Vacanta6.html
@@ -286,18 +286,18 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 3</h3>
-                    <p>• <b>Ayutthaya</b> one day trip</p>
-                    <p>• Explore Buddha head in tree roots </p>
-                    <p>• Visit Ayutthaya ancient grounds</p>
-                    <p>• Visit Floating Market</p>
-                    <p>• National Museum</p>
+                    <p>• <b>Ayutthaya</b> excursie de o zi</p>
+                    <p>• Explorează capul lui Buddha prins în rădăcinile copacului </p>
+                    <p>• Vizitează siturile antice din Ayutthaya</p>
+                    <p>• Descoperă Piața Plutitoare</p>
+                    <p>• Vizitează Muzeul Național</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
-                    <p>• Visit <b>Three head elephant</b> statue</p>
-                    <p>• Visit Golden Mount Temple</p>
-                    <p>• Explore <b>Skywalk</b> Bangkok </p> 
-                    <p>• Enjoy Asiatique The Riverfront</p> 
+                    <p>• Vizitează <b>statuia Elefantului cu trei capete</b> </p>
+                    <p>• Vizitează Templul Muntelui de Aur</p>
+                    <p>• Explorează <b>Skywalk</b> Bangkok </p> 
+                    <p>• Bucură-te de Asiatique The Riverfront</p> 
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
@@ -316,21 +316,21 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
-                    <p>• <b>Bamboo Rafting</b> in Chiang Mai </p>
+                    <p>• <b>Bamboo Rafting</b> la Chiang Mai </p>
                     <p>• Bucura-te de cascade uimitoare <b>Sticky Waterfall</b></p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 9</h3>
-                    <p>• Trip To <b>Railay Beach</b></p>
-                    <p>•⁠ Cave of the Princess Goddess Legend</p>
+                    <p>• Excursie de o zi la <b>Plaja Railay</b> </p>
+                    <p>•⁠ Peștera Zeiței Prințesei Legenda</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
-                    <p>• Viziteaza <b>4 Islands And Hong Islands</b> With Luxury Longtail Boat </p>
+                    <p>• Vizitează <b>4 Insule și Insulele Hong</b> cu barcă tradițională de lux </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
-                    <p>• Explorarea naturii si a piscinei naturale  <b>Blue Pool</b> </p>
+                    <p>• Explorarea naturii si a piscinei naturale <b>Blue Pool</b> </p>
                     <p>•⁠ Viziteaza prietenii giganti la Elephant Sanctuary </p>
                     <p>•⁠ ⁠Exploreaza Piata de noapte</p>
                 </div>
