--- a/Vacanta7.html
+++ b/Vacanta7.html
@@ -286,10 +286,10 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 3</h3>
-                    <p>• Visit <b>Three head elephant</b> statue</p>
-                    <p>• Visit Golden Mount Temple</p>
-                    <p>• Explore <b>Skywalk</b> Bangkok </p> 
-                    <p>• Enjoy Asiatique The Riverfront</p> 
+                    <p>• Vizitează <b>statuia Elefantului cu trei capete</b> </p>
+                    <p>• Vizitează Templul Muntelui de Aur</p>
+                    <p>• Explorează <b>Skywalk</b> Bangkok </p> 
+                    <p>• Bucură-te de Asiatique The Riverfront</p> 
                 </div>
                  <div class="itinerary-card">
                     <h3>Ziua 4</h3>
