--- a/Vacanta7.html
+++ b/Vacanta7.html
@@ -293,54 +293,54 @@
                 </div>
                  <div class="itinerary-card">
                     <h3>Ziua 4</h3>
-                    <p>• <b>Ayutthaya</b> one day trip</p>
-                    <p>• Explore Buddha head in tree roots </p>
-                    <p>• Visit Ayutthaya ancient grounds</p>
-                    <p>• Explore National Museum</p>
-                    <p>• Ayutthaya Night Market</p>
+                    <p>• <b>Ayutthaya</b> excursie de o zi</p>
+                    <p>• Explorează capul lui Buddha prins în rădăcinile copacului </p>
+                    <p>• Vizitează siturile antice din Ayutthaya</p>
+                    <p>• Vizitează Muzeul Național</p>
+                    <p>• Piața de Noapte Ayutthaya</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• Visit the large reclining Buddha </p>
-                    <p>• Ayutthaya <b>Elephant Palace and Royal Kraal</b> </p>
-                    <p>• Visit Floating Market</p> </p>                
+                    <p>• Vizitează marele Buddha culcat </p>
+                    <p>• Palatul Elefantilor din Ayutthaya și Royal Kraal </p>
+                    <p>• Vizitează Piața Plutitoare</p> </p>                
                 </div>      
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
-                    <p>• Stay in <b>Floatinghouse River</b> </p>
-                    <p>• ⁠Visit the bridge on River </p>
-                    <p>• ⁠Explore the cave and serene environment </p>
+                    <p>• Cazează-te în <b>Floatinghouse River</b> </p>
+                    <p>• Vizitează podul de pe râu </p>
+                    <p>• Explorează peștera și mediul liniștit </p>
                 </div>  
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
-                    <p>• Explore <b>Erawan National Park</b></p>
-                    <p>• Visit Hellfire Pass </p>
-                    <p>• Relax at the Resort </p>
+                    <p>• Explorează <b>Parcul Național Erawan</b></p>
+                    <p>• Vizitează Hellfire Pass </p>
+                    <p>• Relaxează-te la Resort </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
-                    <p>• Train Ride on the <b>Death Railway</b> </p>
-                    <p>• Visit ⁠Krasea Cave </p>
-                    <p>• Explore Tiger cave </p>
+                    <p>• Călătorie cu trenul pe Calea Ferată a Morții </p>
+                    <p>• Vizitează Peștera Krasea </p>
+                    <p>• Explorează Peștera Tigru </p>
                 </div>
                  <div class="itinerary-card">
                     <h3>Ziua 9</h3>
-                    <p>• Interacting with <b>Tigers</b> at Exotic Zoo </p>
-                    <p>• A Huge Buddha Statue </p>
-                    <p>• Visit Toscana Valley </p>
-                    <p>• Best Restaurant with <b>Michelin Guide</b> </p>
+                    <p>•Interacționează cu <b>tigrii</b> la Exotic Zoo </p>
+                    <p>• O statuie uriașă a lui Buddha </p>
+                    <p>• Vizitează Toscana Valley </p>
+                    <p>• Cel mai bun restaurant cu <b>Michelin Guide</b> </p>
                  </div>
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
-                    <p>• Visit <b>Khao Yai National Park</b> </p>
-                    <p>•⁠ Most Famous Waterfalls </p>
-                    <p>• Night safari tours in Khao Yai </p>
+                    <p>• Vizitează <b>Parcul Național Khao Yai</b> </p>
+                    <p>•⁠ Cele mai faimoase cascade </p>
+                    <p>• Tururi de <b>safari de noapte</b> în Khao Yai </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
-                    <p>• European countryside village </p>
-                    <p>• Enjoy at <b>Winery</b> </p>
-                    <p>• Sosire in <b>Phuket</b></p>
+                    <p>• Satul din zona rurală europeană </p>
+                    <p>• Bucură-te <b>Winery</b> </p>
+                    <p>• Sosire la <b>Phuket</b></p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 12</h3>
